@@ -1,4 +1,5 @@
 903bc29217bc40ecae55af098dc17e08 net.rieter.xot.channel.se.oppetarkiv/oppetarkivfanart.jpg
+88f9bb12ca35416f66c2b4f2d27ab0d8 net.rieter.xot.channel.se.sbs/dplayfanart.jpg
 f9a94784209abfbb6314ae9529c1bacc net.rieter.xot.channel.se.sbs/kanal5fanart.jpg
 24c6aa0ee1f7a49089f9e8b2929c194a net.rieter.xot.channel.se.sbs/tv11fanart.jpg
 aa685f708e272c69b41c4df5583a5da7 net.rieter.xot.channel.se.sbs/tv11seimage.jpg
@@ -8,6 +9,9 @@ eb2aa61408ee89b97b0ca731835a9828 net.rieter.xot.channel.se.tv4se/tv4playsefanart
 7c71823198ce9c0eabd52ddb373ebe91 net.rieter.xot.channel.se.urplay/urplayfanart.jpg
 040ea363b49a1a50a57360b9276d90bb net.rieter.xot.channel.se.oppetarkiv/oppetarkivimage.png
 4409a324e669351da20d6ac375c6b7ea net.rieter.xot.channel.se.oppetarkiv/oppetarkivlarge.png
+f2acd6984bb38466f08082e4b696e04e net.rieter.xot.channel.se.sbs/dplayfanart.png
+33ce9dbc98c4541db151dd49e0187c70 net.rieter.xot.channel.se.sbs/dplayimage.png
+0926757305f3860000c98fd4ae147c7b net.rieter.xot.channel.se.sbs/dplaylarge.png
 852022244db88d9d77190fcb2b30c307 net.rieter.xot.channel.se.sbs/tv11selarge.png
 865fd03c49a5310e5104947985fe9cbf net.rieter.xot.channel.se.sbs/tv5seimage.png
 f7ba72a2e8d2862171caf7a26cf45d82 net.rieter.xot.channel.se.sbs/tv5selarge.png
